HND-30 Add languages index view and controller
